busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
    - name: busybox
      image: busybox
      command:
      - sleep
      - "4600"
      volumeMounts:
      - mountPath: "/data"
        name: my-vol
        readOnly: true
  volumes:
    - name: my-vol
      persistentVolumeClaim:
        claimName: pvc-1
