log-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-demo
spec:
  volumes:
  - name: varlog
    emptyDir: {}
  containers:
  - name: counter
    image: busybox
    args:
    - /bin/sh
    - -c
    - >
      i=0;
      while true;
      do
        echo "$i: $(date)" >> /var/log/demoapp.log;
        i=$((i+1));
        sleep 1;
      done
    volumeMounts:
    - name: varlog
      mountPath: /var/log
  - name: monitor
    image: busybox
    args: [/bin/sh, -c, 'tail -n+1 -f /var/log/app/demoapp.log']
    volumeMounts:
    - name: varlog
      mountPath: /var/log/app
