my-secret-q5t2.yaml
#kubectl create secret generic my-secret --from-literal=username=admin --from-literal=password=cka@2020!
#kubectl rm secret
#kubectl apply -f my-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secure-admin
  name: secure-admin
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - command:
    - sleep
    - "1200"
    image: busybox
    name: secure-admin
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
controlplane $ ^C
controlplane $ cat my-secret.yaml 
apiVersion: v1
kind: Pod
metadata:
  name: secure-pod
spec:
  containers:
  - name: secure-pod
    image: busybox
