my-secret.yaml
#kubectl create secret generic my-secret --from-literal=username=admin --from-literal=password=cka@2020!
#kubectl rm my-secret
apiVersion: v1
kind: Pod
metadata:
  name: secure-pod
spec:
  containers:
  - name: secure-pod
    image: busybox
