node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: prod
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/hostname: k8s-node-01
