secure-admin.yaml
#kubectl run secure-admin --image=busybox --command sleep 1200 --dry-run=client -o yaml > secure-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secure-admin
  name: secure-admin
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - command:
    - sleep
    - "1200"
    image: busybox
    name: secure-admin
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
