static-nginx.yaml
#mkdir -p /etc/kubernetes/manifests
cat<<EOF >/etc/kubernetes/manifests/static-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: static-nginx
  name: static-nginx
spec:
  containers:
  - image: nginx
    name: static-nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
EOF
