vol-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vol-test-pod
spec:
  containers:
    - image: nginx
      name: nginx
      volumeMounts:
        - mountPath: /var/www/html
          name: test-vol
  volumes:
    - name: test-vol
      emptyDir: {}
