web.yaml
#kubectl run web --image=nginx --port=80 --dry-run=client -o yaml > web.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web
  name: web
spec:
  containers:
  - image: nginx
    name: web
    ports:
    - containerPort: 80
      name: webport
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
