multi-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-host-ingress
spec:
  rules:
  - host: "web.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/video"
        backend:
          service:
            name: web-service
            port:
              number: 8080
  - host: "search.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: search-service
            port:
              number: 9000
