webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http:
      paths:
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: webapp-svc
              port:
                number: 8080
